k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wordguess

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordguess
  namespace: wordguess
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordguess
  template:
    metadata:
      labels:
        app: wordguess
    spec:
      containers:
        - name: wordguess
          image: ghcr.io/pablo-george/wordguess.pablogeorge.org:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wordguess-data

---
apiVersion: v1
kind: Service
metadata:
  name: wordguess
  namespace: wordguess
spec:
  selector:
    app: wordguess
  ports:
    - port: 3000
      targetPort: 3000
